--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="">ABOUT</a></li>
             <li><a href="">COURSE</a></li>
             <li><a href="">BLOG</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="">CONTACT US</a></li>
         </ul>
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
