--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="">COURSE</a></li>
-            <li><a href="">BLOG</a></li>
+            <li><a href="">BLOGS</a></li>
             <li><a href="">CONTACT</a></li>
         </ul>
       </div>
